fix: Fix horizontal scroll

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,18 +7,16 @@
   position: relative;
   text-align: center;
   align-items: center;
-  padding-left: 20px;
-  padding-right: 20px;
   margin-bottom: 20px;
 }
 
 .header__branding {
-  height: 40px;  
-  width: 40px;  
+  height: 40px;
+  width: 40px;
+  margin-left: 20px;
 }
 
 .header__text {
   font-size: 1.2rem;
   margin-left: 10px;
 }
-
